--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <!-- Fontawesome scripts -->
     <script src="https://kit.fontawesome.com/8f2e2c785a.js" crossorigin="anonymous"></script>
 </head>
+ <!-- I've just completed a front-end coding challenge from @frontendmentor! 🎉
+
+You can see my solution here: https://www.frontendmentor.io/solutions/product-preview-card-component-resolved-by-grid-and-flex-kFrxDtayFm
+
+Any suggestions on how I can improve are welcome! -->
+
 
 <body>
     <div class="container">
